--- a/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Reflection;
 @using Northwind.Application.Constants
-@using Northwind.Application.Models.Employee
+@using Northwind.Application.Models.Seller
 @using Northwind.Bll.Enums
 @using Northwind.Bll.Services
 @using Northwind.Bll.Services.Extensions
