--- a/Northwind.Application/Views/Shared/_EditFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_EditFormPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Reflection;
-@using Northwind.Application.Models.Employee
+@using Northwind.Application.Models.Seller
 @using Northwind.Bll.Enums
 @using Northwind.Bll.Services
 @using Northwind.Bll.Services.Extensions
