--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         @if (User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Admin))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Employees" asp-action="Index">Sellers</a>
+                                <a class="nav-link text-dark" asp-controller="Sellers" asp-action="Index">Sellers</a>
                             </li>                            
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Customers" asp-action="Index">Customers</a>
@@ -66,7 +66,7 @@
                             }
                             else
                             {
-                                @if (User.IsInRole(UserRoles.Employee))
+                                @if (User.IsInRole(UserRoles.Seller))
                                 {
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-controller="Customers" asp-action="Index">Customers</a>
