--- a/Northwind.Application/Views/OrderDetails/Index.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Index.cshtml
@@ -17,7 +17,7 @@
 
 <h1>"@(ViewBag.ProductOrCompanyName)" Order Details</h1>
 
-@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Employee))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Seller))
 {
     @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
 }
